fix: adjusted spacing and width

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,7 +18,7 @@ html, body {
 }
 
 .container {
-  max-width: 640px;
+  max-width: 680px;
   margin: auto;
   padding: 10px;
 }
